# bgen17

./: CMakeLists.txt  bgen17.pc.in
apps/: bgenix.cpp  cat-bgen.cpp  edit-bgen.cpp
example/: CMakeLists.txt  bgen_to_vcf.cpp  compute_expected_dosage.cpp
include/: config.h
include/appcontext/: ApplicationContext.hpp  CmdLineOptionProcessor.hpp  CmdLineUIContext.hpp  Timer.hpp  UIContext.hpp
include/db/: Connection.hpp  SQLStatement.hpp  SQLite3Connection.hpp  SQLite3Statement.hpp
include/genfile/: IndexQuery.hpp  View.hpp  bgen.hpp  zlib.hpp
include/genfile/bgen/: bgen.hpp
src/: ApplicationContext.cpp  CmdLineUIContext.cpp  Connection.cpp  IndexQuery.cpp  SQLStatement.cpp  SQLite3Connection.cpp  SQLite3Statement.cpp  Timer.cpp  UIContext.cpp  View.cpp  bgen.cpp
test/: CMakeLists.txt
test/unit/: ProbSetCheck.cpp  test_bgen_header_format.cpp  test_bgen_snp_format.cpp  test_little_endian.cpp  test_utils.hpp  test_variant_data_block.cpp
